Refs #133599 - Fix Clear btn on small screens, in facet modal.

--- a/src/SearchBlock/styles.less
+++ b/src/SearchBlock/styles.less
@@ -1229,6 +1229,7 @@ div.ui.modal.facet {
 
   div.actions {
     display: flex;
+    flex-wrap: wrap;
     align-items: baseline;
     border: none;
     text-align: left;
